--- a/forgot-password.html
+++ b/forgot-password.html
@@ -10,7 +10,6 @@
       <div class="container">
          <div class="login-box">
          <div class="centered">
-         <form action="/send-password-reset.php" method="post" autocomplete="off" onsubmit="return validateForm()">
             <div class="user-box">
                <input type="text" id="email" name="email" required="" />
                <label>Email</label>
@@ -19,7 +18,7 @@
             <div class="content">
             </div>
             <div class="field">
-                <input type="submit" value="submit" onclick="showAlert();" href="../capstone/login.html">
+                <input type="submit" value="submit" onclick="showAlert();" href="./login.html">
             </div>
          </form>
       </div>
