--- a/pages/register.html
+++ b/pages/register.html
@@ -11,7 +11,7 @@
         <div class="title">Registration</div>
          <div class="register-box">
           <div class="content">
-            <form action="../scripts/register.php" method="POST" autocomplete="off">
+            <form action="/scripts/register.php" method="POST" autocomplete="off">
             <div class="user-box">
               <input type="text" placeholder="Enter your first name" name="first_name" required>
              </div>
