--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
         
         .navbar .navbar-nav .nav-link {
           color: white; /* Set the text color to white */
+          margin: 10px 15px; /* Adjust the margin to add spacing between links */
         }
         
         .background-image {
@@ -75,17 +76,16 @@
           </div>
       </div>  
     </nav>
-     <!-- <body style="background-color: gray;"> -->
-      <div class="background-image">
-        <div class="container-1 d-flex text-center mt-5">
-          <!--Centering container-->
-          <h1 style="background-color: transparent;">
-            BOOK YOUR MEMORIES WITH <span style="color: orange;">NORLITZ BATO FILMS</span> More than just photographs. More than just films. More of why memories are treasures.
-            Capture your essence here!
-          </h1>
-        </div>
+    <div class="background-image">
+      <div class="container-1 d-flex text-center mt-5">
+        <!--Centering container-->
+        <h1 style="background-color: transparent;">
+          BOOK YOUR MEMORIES WITH <span style="color: orange;">NORLITZ BATO FILMS</span> More than just photographs. More than just films. More of why memories are treasures.
+          Capture your essence here!
+        </h1>
       </div>
-      <!-- Optional Javascript; choose one of the two! -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </body>
+    </div>
+    <!-- Optional Javascript; choose one of the two! -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </body>
 </html>
