--- a/pages/home.html
+++ b/pages/home.html
@@ -19,6 +19,7 @@
         
         .navbar .navbar-nav .nav-link {
           color: white; /* Set the text color to white */
+          margin: 10px 15px; /* Adjust the margin to add spacing between links */
         }
         
         .background-image {
