--- a/login.html
+++ b/login.html
@@ -9,20 +9,20 @@
    <body>
       <div class="container">
          <div class="login-box">
-         <div class="title">
+         <div class="title" style="color: white;">
             Welcome Back!
          </div>
          <div class="centered">
-         <p>To keep connected with us, please log in with your personal info.</p>
+            <p style="color: #fff;">To keep connected with us, please log in with your personal info.</p>
          <form action="./scripts/authenticate.php" method="post" autocomplete="off" onsubmit="return validateForm()">
             <div class="user-box">
                <input type="text" id="email" name="email" required="" />
-               <label>Email</label>
+               <label style="color: white;">Email</label>
                <span id="email-error" class="error-message"></span> <!-- Error message for email -->
              </div>
              <div class="user-box">
                <input type="password" name="password" id="password" required="" />
-               <label>Password</label>
+               <label style="color: white;">Password</label>
                <span class="password-toggle-icon"><i class="fas fa-eye"></i></span>
                <span id="password-error" class="error-message"></span> <!-- Error message for password -->
              </div>
@@ -34,8 +34,8 @@
             <div class="field">
                <input type="submit" value="Login">
             </div>
-            <div class="signup-link">
-               Not a member? <a href="/pages/register.html">Signup now</a>
+            <div class="signup-link" style="color: white;">
+               Not a member? <a href="/pages/register.html">Register Now</a>
             </div>
          </form>
       </div>
