--- a/pages/home.html
+++ b/pages/home.html
@@ -82,6 +82,14 @@
           </h1>
         </div>
       </div>
+
+      <div class="container" style="background-color: black; padding: 200vh;">
+        
+      </div>
+
+      <div class="container-2" style="background-color: gray; padding: 200vh;">
+        
+      </div>
       <!-- Optional Javascript; choose one of the two! -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
