--- a/pages/register.html
+++ b/pages/register.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
    <head>
-    <link rel="stylesheet" href="/pages/register.css">
+    <link rel="stylesheet" href="../pages/register.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
       <meta charset="utf-8">
       <title>Register</title>
    </head>
    <body>
       <div class="container">
-        <div class="title">Registration</div>
-         <div class="register-box">
+        <div class="register-box">
+          <div class="title">Registration</div>
+          <p style="color: #fff;">Provide your details below to complete your registration and start connecting with us</p>
           <div class="content">
             <form action="/scripts/register.php" method="POST" autocomplete="off">
             <div class="user-box">
-              <input type="text" placeholder="Enter your first name" name="first_name" required>
+              <input type="text" placeholder="Enter your first name" name="full_name" required>
              </div>
-             <div class="user-box">
-              <input type="text" placeholder="Enter your last name" name="last_name" required>
-            </div>
             <div class="user-box">
-              <input type="email" placeholder="Enter your email" name="email" required
-              pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}"
+              <input type="email" placeholder="Enter your email" name="email_address" required
+              pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0.9.-]+\.[a-zA-Z]{2,4}"
               title="Please enter a valid email address.">
             </div>
             <div class="user-box">
@@ -35,10 +33,10 @@
               <span class="password-toggle-icon confirm-toggle-icon"><i class="fas fa-eye"></i></span>
             </div>
             <div class="field">
-               <input type="submit" value="register">
+               <input type="submit" value="Sign In">
             </div>
             <div class="login-link">
-              Already have an Account? <a href="/login.html">Login now</a>
+                <a href="/login.html" style="color: #fff;">Already have an Account?<a href="/login.html">Register Now</a>
            </div>
          </form>
       </div>
@@ -78,7 +76,7 @@
 
           //minimum password length validation  
           if(pw.length < 8) {  
-            document.getElementById("message").innerHTML = "**Password length must be atleast 8 characters";  
+            document.getElementById("message").innerHTML = "**Password length must be at least 8 characters";  
             return false;  
           }    
 
