--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./dashboard.css">
+    <link rel="stylesheet" href="../admin/dashboard.css">
     <title>Admin Dashboard</title>
     <script>
         // Function to load booking data dynamically
@@ -33,16 +33,10 @@
     </script>
 </head>
 <body>
+    
     <div class="navbar">
         <div class="container">
         </div>
-    </div>
-
-    <!-- Sidebar below the navbar -->
-    <div class="sidebar">
-        <a href="#">Booking Management</a>
-        <a href="#">Booking Approval</a>
-        <a href="#">Report and Analytics</a>
     </div>
 
     <div class="container">
