--- a/login.html
+++ b/login.html
@@ -16,13 +16,13 @@
             <p style="color: #fff;">To keep connected with us, please log in with your personal info.</p>
          <form action="./scripts/authenticate.php" method="post" autocomplete="off" onsubmit="return validateForm()">
             <div class="user-box">
-               <input type="text" id="email" name="email" required="" />
-               <label style="color: white;">Email</label>
+               <input type="text" id="" name="email" required="" />
+               <label style="color: white;">Enter your Email</label>
                <span id="email-error" class="error-message"></span> <!-- Error message for email -->
              </div>
              <div class="user-box">
                <input type="password" name="password" id="password" required="" />
-               <label style="color: white;">Password</label>
+               <label style="color: white;">Enter your Password</label>
                <span class="password-toggle-icon"><i class="fas fa-eye"></i></span>
                <span id="password-error" class="error-message"></span> <!-- Error message for password -->
              </div>
