--- a/login.html
+++ b/login.html
@@ -27,14 +27,14 @@
                <span id="password-error" class="error-message"></span> <!-- Error message for password -->
              </div>
             <div class="content">
-               <div class="pass-link">
+               <div class="pass-link" style="color: #FD4A23;">
                   <a href="/forgot-password.html">Forgot password?</a>
-               </div>
+                </div>
             </div>
-            <div class="field">
-               <input type="submit" value="Login">
-            </div>
-            <div class="signup-link" style="color: white;">
+            <div class="field"> <!-- Added a div for the login button -->
+               <input type="submit" value="Login" style="margin-top: 10px; background-color: #FD4A23; padding: 10px 100px;"> <!-- Set the background-color to #FD4A23 -->
+           </div>
+            <div class="signup-link" style="color: white; margin-top: 10px;">
                Not a member? <a href="/pages/register.html">Register Now</a>
             </div>
          </form>
