--- a/pages/register.html
+++ b/pages/register.html
@@ -33,11 +33,11 @@
               <span class="password-toggle-icon confirm-toggle-icon"><i class="fas fa-eye"></i></span>
             </div>
             <div class="field">
-               <input type="submit" value="Sign In">
+              <input type="submit" value="Sign In" style="background-color: #FD4A23; color: white; padding: 10px 100px;">
             </div>
             <div class="login-link">
-                <a href="/login.html" style="color: #fff;">Already have an Account?<a href="/login.html">Register Now</a>
-           </div>
+              <a href="/login.html" style="color: #fff;">Already have an Account?<a href="/login.html" style="color: #FC5404;">Register Now</a>
+          </div>
          </form>
       </div>
       <script>
