--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -2,11 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../admin/dashboard.css">
     <title>Admin Dashboard</title>
+    <script>
+        // Function to load booking data dynamically
+        function loadBookingData() {
+            $.ajax({
+                type: "GET",
+                url: "get_bookings.php", // Path to your PHP script
+                dataType: "json",
+                success: function (data) {
+                    var tableBody = $("#booking-table tbody");
+                    tableBody.empty(); // Clear existing data
+
+                    // Iterate through the data and append rows to the table
+                    $.each(data, function (index, booking) {
+                        var row = "<tr><td>" + booking.name + "</td><td>" + booking.email + "</td><td>" + booking.date + "</td></tr>";
+                        tableBody.append(row);
+                    });
+                }
+            });
+        }
+
+        // Load booking data when the page loads
+        loadBookingData();
+
+        // You can also set an interval to periodically refresh the data
+        // setInterval(loadBookingData, 5000); // Refresh every 5 seconds
+    </script>
 </head>
 <body>
-    <header class ="header"></header>
-    <section class="sidebar"></section>
+    
+    <div class="navbar">
+        <div class="container">
+        </div>
+    </div>
+
+    <div class="container">
+        <h2>Booking Listing</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Booking Data</th>
+                    <th>Labels</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Add booking data here dynamically -->
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
