--- a/pages/home.html
+++ b/pages/home.html
@@ -63,6 +63,9 @@
           <div class="ms-auto me-0">
               <ul class="navbar-nav">
                   <li class="nav-item">
+                    <a class="nav-link" href="../pages/calendar.html">Book Now</a>
+                  </li>
+                  <li class="nav-item">
                       <a class="nav-link" href="#">About</a>
                   </li>
                   <li class="nav-item">
