--- a/forgot-password.html
+++ b/forgot-password.html
@@ -32,7 +32,7 @@
             <div class="content">
             </div>
             <div class="field">
-                <input type="submit" value="submit" onclick="showAlert();" href="./login.html">
+                <input type="submit" value="submit" onclick="showAlert();" href="scripts/forgot-password.php">
             </div>
          </form>
       </div>
