--- a/forgot-password.html
+++ b/forgot-password.html
@@ -5,20 +5,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
       <meta charset="utf-8">
       <title>Forgot Password Page</title>
-      <script>
-         function sendResetEmail() {
-            var email = document.getElementById('email').value;
-            var xhr = new XMLHttpRequest();
-            xhr.open('POST', 'forgot-password.php', true);
-            xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-            xhr.onreadystatechange = function () {
-               if (xhr.readyState === 4 && xhr.status === 200) {
-                  alert(xhr.responseText);
-               }
-            };
-            xhr.send('email=' + email);
-         }
-      </script>
    </head>
    <body>
       <div class="container">
@@ -32,12 +18,10 @@
             <div class="content">
             </div>
             <div class="field">
-                <input type="submit" value="submit" onclick="showAlert();" href="scripts/forgot-password.php">
+                <input type="submit" value="submit" href="scripts/forgot-password.php">
             </div>
          </form>
       </div>
       <script src="../capstone/scripts/script.js"></script>
-      <script>
-      </script>
    </body>
 </html>
