--- a/forgot-password.html
+++ b/forgot-password.html
@@ -18,7 +18,7 @@
             <div class="content">
             </div>
             <div class="field">
-                <input type="submit" value="submit" href="scripts/forgot-password.php">
+                <input type="submit" value="submit" href="">
             </div>
          </form>
       </div>
