--- a/pages/register.html
+++ b/pages/register.html
@@ -40,8 +40,7 @@
                 </div>
 
                 <div class="login-link">
-                    <a href="/login.html" style="color: #fff;">Already have an Account?<a href="/login.html"
-                                                                                       style="color: #FC5404;"> Register Now</a>
+                    <a href="/login.html" style="color: #fff;">Already have an Account?<a href="/login.html" style="color: #FC5404;"> Register Now</a>
                 </div>
             </form>
         </div>
