--- a/forgot-password.html
+++ b/forgot-password.html
@@ -12,13 +12,13 @@
             <div class="centered">
                <div class="user-box">
                   <input type="text" id="email" name="email" required="" />
-                  <label>Email</label>
+                  <label style="color: white;">Email</label>
                   <span id="email-error" class="error-message"></span>
                </div>
                <div class="content">
                </div>
                <div class="field">
-                  <input type="submit" value="submit" href="">
+                  <input type="submit" id="submit" style="background-color: #E35F20; color: white;" value="Submit">
                </div>
             </div>
          </div>
