--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -250,7 +250,7 @@
         }
 
         .legend-item.past-date {
-            background-color: gray; 
+            background-color: #353637; 
         }
 
         .legend-item .holiday{
@@ -264,6 +264,11 @@
             height: 20px;
             background-color: red; 
             margin-right: 10px;
+        }
+
+        .holiday {
+            background-color: red !important;
+            color: white;
         }
 
         /* Add this CSS for the booking button */
