--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -237,6 +237,7 @@
 
         .legend-text{
             color: white;
+            margin-right: 20px; /* Add margin to legend text */
         }
 
         .legend-item {
