--- a/pages/home.html
+++ b/pages/home.html
@@ -4,25 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-      .image-container {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 1;
-      }
-    </style>
   </head>
   <body>
-    <div class="container" style="background-color: black; padding: 100vh; text-align: center; position: relative;">
-      <!-- Add your image inside a container div with a specific class for styling -->
-      <div class="image-container">
-        <img src="../images/hu.png" alt="Your Image" width="100" height="100">
-      </div>
-    </div>
+    <h1>Hello</h1>
   </body>
 </html>
