--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
              <div class="user-box">
                <input type="password" name="password" id="password" required="" style="color: white;" />
                <label style="color: white;">Enter your Password</label>
-               <span class="password-toggle-icon" id="password-toggle" onclick="togglePasswordVisibility()"><i class="fas fa-eye"></i></span>
+               <span class="password-toggle-icon" id="password-toggle"style="color: white;"onclick="togglePasswordVisibility()"><i class="fas fa-eye"></i></span>
              </div>
             <div class="content">
                <div class="pass-link" style="color: #FD4A23;">
